UC5 - 1st node deleted (New)